test_fixtures/variable/use_this_as_var.lox
// ParserError: UnexpectedToken found This from l2c5 to l2c9 expected Identifier
var this = "value";
